chore: fix typecheck
Signed-off-by: ZTL-UwU <zhangtianli2006@163.com>

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "files": ["dist"],
   "keywords": ["bun", "lorem", "chinese"],
+  "workspaces": ["benchmark/"],
   "license": "MIT",
   "homepage": "https://github.com/ZTL-UwU/cn-lorem#readme",
   "repository": {
