--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "description": "",
+  "description": "fast chinese lorem-ipsum & names generator",
   "scripts": {
     "build": "bun run build.ts",
     "prepublishOnly": "bun run build",
