fix: pacakge.json exports
Signed-off-by: ZTL-UwU <zhangtianli2006@163.com>

--- a/package.json
+++ b/package.json
@@ -1,8 +1,21 @@
 {
   "name": "cn-lorem-ipsum",
   "version": "0.0.3",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs"
+    }
+  },
+  "main": "./dist/index.mjs",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "typesVersions": {
+    "*": {
+      "*": ["./dist/*", "./dist/index.d.ts"]
+    }
+  },
   "description": "fast chinese lorem-ipsum & names generator",
   "scripts": {
     "build": "unbuild",
