--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cn-lorem-ipsum",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -25,7 +25,7 @@
   },
   "files": ["dist"],
   "keywords": ["bun", "lorem", "chinese"],
-  "workspaces": ["benchmark/"],
+  "workspaces": ["benchmark/", "playground/"],
   "license": "MIT",
   "homepage": "https://github.com/ZTL-UwU/cn-lorem-ipsum#readme",
   "repository": {
