--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "cn-lorem-ipsum",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.cjs"
+      "import": "./dist/index.mjs"
     }
   },
   "main": "./dist/index.mjs",
@@ -36,8 +35,8 @@
   "author": "Tony Zhang <zhangtianli2006@163.com>",
   "devDependencies": {
     "@biomejs/biome": "1.7.1",
-    "@types/bun": "^1.1.5",
-    "typescript": "^5.5.2",
-    "unbuild": "^2.0.0"
+    "@types/bun": "^1.2.4",
+    "typescript": "^5.8.2",
+    "unbuild": "^3.5.0"
   }
 }
