--- a/playground/package.json
+++ b/playground/package.json
@@ -12,29 +12,30 @@
   },
   "dependencies": {
     "@radix-icons/vue": "^1.0.0",
-    "@vueuse/core": "^10.11.0",
-    "class-variance-authority": "^0.7.0",
+    "@tailwindcss/vite": "^4.0.9",
+    "@vueuse/core": "^12.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cn-lorem-ipsum": "^0.1.3",
-    "lucide-vue-next": "^0.377.0",
-    "radix-vue": "^1.8.4",
-    "tailwind-merge": "^2.3.0",
+    "cn-lorem-ipsum": "^0.2.0",
+    "lucide-vue-next": "^0.477.0",
+    "radix-vue": "^1.9.17",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
-    "vaul-vue": "^0.1.3",
-    "vue": "^3.4.30",
-    "vue-sonner": "^1.1.3"
+    "vaul-vue": "^0.3.0",
+    "vue": "^3.5.13",
+    "vue-sonner": "^1.3.0"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
-    "@types/node": "^20.14.8",
-    "@vitejs/plugin-vue": "^5.0.5",
-    "@vue/tsconfig": "^0.5.1",
-    "autoprefixer": "^10.4.19",
-    "npm-run-all2": "^6.2.0",
-    "shiki": "^1.9.0",
-    "tailwindcss": "^3.4.4",
-    "typescript": "~5.4.5",
-    "vite": "^5.3.1",
-    "vue-tsc": "^2.0.22"
+    "@types/node": "^20.17.23",
+    "@vitejs/plugin-vue": "^5.2.1",
+    "@vue/tsconfig": "^0.7.0",
+    "autoprefixer": "^10.4.20",
+    "npm-run-all2": "^7.0.2",
+    "shiki": "^3.1.0",
+    "tailwindcss": "^4.0.9",
+    "typescript": "^5.8.2",
+    "vite": "^6.2.0",
+    "vue-tsc": "^2.2.8"
   }
 }
